--- a/bedroom-listing-pages/large-beds.html
+++ b/bedroom-listing-pages/large-beds.html
@@ -11,17 +11,17 @@
     <nav class="listing-nav">
       <ul>
         <li>
-          <a href="index.html">
+          <a href="/">
             <img
               src="images/icons/iconmonstr-circle-1-240 (1) (1).png"
               alt="Logo"
             />
           </a>
         </li>
-        <li><a href="index.html">Stores</a></li>
-        <li><a href="index.html">Ideas & Advice</a></li>
-        <li><a href="index.html">Basket</a></li>
-        <li><a href="index.html">Contact</a></li>
+        <li><a href="/">Stores</a></li>
+        <li><a href="/">Ideas & Advice</a></li>
+        <li><a href="/">Basket</a></li>
+        <li><a href="/">Contact</a></li>
       </ul>
     </nav>
     <section class="listing-products-nav products-nav">
@@ -46,7 +46,7 @@
     <section class="product-listing-breadcrumbs">
       <ul>
         <li>
-          <a href="index.html">Home</a>
+          <a href="/">Home</a>
         </li>
         <li>
           <p>></p>
@@ -200,10 +200,10 @@
     </section>
     <footer class="listing-socials-footer socials-footer">
       <ul>
-        <li><a href="index.html">Instagram</a></li>
-        <li><a href="index.html">Facebook</a></li>
-        <li><a href="index.html">Twitter</a></li>
-        <li><a href="index.html">Email</a></li>
+        <li><a href="/">Instagram</a></li>
+        <li><a href="/">Facebook</a></li>
+        <li><a href="/">Twitter</a></li>
+        <li><a href="/">Email</a></li>
       </ul>
     </footer>
   </body>
