--- a/category-pages/bedroom.html
+++ b/category-pages/bedroom.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/style.css">
   <link rel="icon" href="images/icons/iconmonstr-circle-1-240 (1) (1).png">
 	<title>Treecreeper Test Website | Category Page</title>
 </head>
@@ -13,8 +13,8 @@
 	<nav>
 		<ul>
 			<li>
-				<a href="index.html">
-					<img src="images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
+				<a href="">
+					<img src="/images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
           </a>
         </li>
         <li><a href="index.html">Stores</a></li>
@@ -26,27 +26,27 @@
     <section class="products-nav">
       <ul>
         <li>
-          <a href="bedroom-category-page.html">
+          <a href="bedroom.html">
             Bedroom
           </a>
         </li>
         <li>
-          <a href="bedroom-category-page.html">
+          <a href="diy.html">
             Kitchen
           </a>
         </li>
         <li>
-          <a href="bedroom-category-page.html">
+          <a href="electronics.html">
             Garden
           </a>
         </li>
         <li>
-          <a href="bedroom-category-page.html">
+          <a href="garden.html">
             DIY
           </a>
         </li>
         <li>
-          <a href="bedroom-category-page.html">
+          <a href="kichen.html">
             Electronics
           </a>
         </li>
@@ -59,25 +59,25 @@
     <section class="product-page-options">
       <ul class="options-list">
         <li>
-          <img src="images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed">\
+          <img src="/images/photos/deconovo-gVKmonDbotU-unsplash.jpg" alt="bed">\
           <a class="category-page-button" href="beds-product-listing-page.html">Small Beds</a>
         </li>
         <li>
-          <img src="images/photos/adam-winger-nclN_J0UtJ8-unsplash.jpg" alt="bed">\
+          <img src="/images/photos/adam-winger-nclN_J0UtJ8-unsplash.jpg" alt="bed">
           <a class="category-page-button" href="beds-product-listing-page.html">Medium Beds</a>
         </li>
         <li>
-          <img src="images/photos/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="bed">
+          <img src="/images/photos/christopher-jolly-GqbU78bdJFM-unsplash.jpg" alt="bed">
            <a class="category-page-button" href="beds-product-listing-page.html">Large Beds</a>
         </li>
         <li>
-          <img src="images/photos/gaelle-marcel-awYrEHKWEk4-unsplash.jpg" alt="bed">
+          <img src="/images/photos/gaelle-marcel-awYrEHKWEk4-unsplash.jpg" alt="bed">
            <a class="category-page-button" href="beds-product-listing-page.html">Futons</a>
         </li>        <li>
-          <img src="images/photos/greg-rivers-YeP1MUZDSsE-unsplash.jpg" alt="bed">
+          <img src="/images/photos/greg-rivers-YeP1MUZDSsE-unsplash.jpg" alt="bed">
            <a class="category-page-button" href="beds-product-listing-page.html">Classic Beds</a>
         </li>        <li>
-          <img src="images/photos/priscilla-du-preez-LpZMZXXpRcM-unsplash.jpg" alt="bed">
+          <img src="/images/photos/priscilla-du-preez-LpZMZXXpRcM-unsplash.jpg" alt="bed">
            <a class="category-page-button" href="beds-product-listing-page.html">Custom Beds</a>
         </li>
       </ul>
